--- a/_pages/about-me.html
+++ b/_pages/about-me.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-permalink: /year-archive/
-title: "Blog posts"
+permalink: /about-me/
+title: "About Me"
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
